Bug 46112 - Cell Border double lines imported from old OOo versions
Summary: Cell Border double lines imported from old OOo versions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:3.6.0.0.beta1 target:3.5.5
Keywords: regression
: 49334 (view as bug list)
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2012-02-15 07:37 UTC by Rick
Modified: 2012-08-03 09:13 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
ods spreadsheet with some double border cells (29.01 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-05-19 08:12 UTC, Ian~G
Details
double borders in OO 3.2.1 (42.25 KB, application/pdf)
2012-05-21 02:46 UTC, Ian~G
Details
Calc bugdoc with all border styles from OOo 3.3 (8.77 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-05 05:39 UTC, Michael Stahl
Details
Writer bugdoc with all border styles from OOo 3.3 (9.66 KB, application/vnd.oasis.opendocument.text)
2012-06-05 05:40 UTC, Michael Stahl
Details
Impress bugdoc with all border styles from OOo 3.3 (19.92 KB, application/vnd.oasis.opendocument.presentation)
2012-06-05 05:40 UTC, Michael Stahl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rick 2012-02-15 07:37:50 UTC
Spreadsheet cell borders do not work correctly. Borders using double lines do not show correctly on the screen and do not print correctly. I do not know about other border line styles. The last time this worked properly was version 3.3.4.
Comment 1 Ian~G 2012-05-11 03:23:46 UTC
Same here (currently version 3.5.3 linux)

Double lines are very handy for financial stuff. i use these a lot on openoffice version 3.2.1 and 3.3 

Line size is set to 1.1pt on openoffice versions. this displays correctly on screen, print preview and print. On libreoffice it's ok on screen at this size but on print preview and print the lines are way too thick.

Maybe the 1.1pt is the outside 'thickness' of both lines together and each individual line needs to be .05pt thick?
Comment 2 sasha.libreoffice 2012-05-18 08:11:40 UTC
Thanks for bugreport
Please, attach ods document that demonstrates this problem
Comment 3 Ian~G 2012-05-19 08:12:21 UTC
Created attachment 61846 [details]
ods spreadsheet with some double border cells

the first two lines of totals are as imported from openoffice 3.2.1 These look right on screen in 3.2.1, look a bit fat and funky in preview, but print pretty well ok. Though they do look a bit boldface.

In 3.5.3 they look like great thick bars on normal screen view, and in print preview. They also print like great thick bars.

The Third line of totals has been modded to look good on normal screen view and is what things should look like in this view. But in preview they come out boldface (too thick) and they print the same.

The last line of totals looks wrong on normal screen view (like a single underline), but looks ok once you have zoomed well in on a print preview and prints correctly. Viz: a thin overline and double thin underlines.

Note that I also had to alter the spacing to contents to get the numbers to sit right within the borders (not too high)

It would be nice to be able to also do a boldface version of both over and double underlines - maybe 0.1pt thick? - for final bottom-line totals. This sort of thing is very common in financial spreadsheets, annual accounts, all that kind of stuff.

Many thanks for your help with this.

Regards, Ian
Comment 4 sasha.libreoffice 2012-05-21 01:56:55 UTC
Thanks for attachment. Problem seen in 3.3.4 and 3.5.3 on Fedora 64 bit
Please, attach PDF done in OO 3.2.1 if available for developers can see how lines should be.
Comment 5 Ian~G 2012-05-21 02:46:27 UTC
Created attachment 61906 [details]
double borders in OO 3.2.1

This is how they look in OpenOffice 3.2.1 and also same in 3.3

These work fine, but they should really be a bit thinner, more like the single border around the top line of the sheet. The double borders seen here would be ideal for the bold version. It's good to have, say, two versions to be able to highlight final totals and that sort of thing.
Comment 6 sasha.libreoffice 2012-05-21 03:32:18 UTC
Thanks for attachment. Now we can see difference.
Changing version to 3.3.4 as most early reproducible

What is interesting: in msExcel 2007 all double lines in first attachment consist of thin lines.
Comment 7 Michael Stahl 2012-05-24 02:44:46 UTC
*** Bug 49334 has been marked as a duplicate of this bug. ***
Comment 8 Michael Stahl 2012-05-24 02:46:34 UTC
looks the same in LibreOffice 3.5.4, OOo 3.4beta, and OOo 3.3.

ah, the document is produced by LibreOffice 3.5, guess then the
borders as written by earlier versions don't get imported
properly?

oh, tried out what happens when importing various double borders
written by OOo 3.3 in LO 3.5.4, what a horrible mess...
Comment 9 Ian~G 2012-05-27 07:45:45 UTC
looks like we may have got crossed wires here.

LO versions from 3.3 ish onwards are unable to import previous version double borders correctly, which of course is a pita.

But more important than this LO 3.5 onwards cannot generate useable double borders at all.

If you make the borders thick enough to show on screen - say 1.05pt - they look horrible when printed. if you set them to look ok when printed they are not visible on screen.

Also if you save the file as .xls or .xlsx you lose the borders altogether.

This is a total show-stopper for anyone wishing to use a spreadsheet for accounting purposes. Almost any accounts, projections, business quotations - in fact almost any sheet with column totals in it.

Luckily I've still got a set of openoffice 3.3 binaries since ubuntu 10.04 ships with the unuseable OO 3.2 and they've taken 3.2.1 out of the repos.

Incidentally, openoffice 3.4 is really borked. It has all of the best lo bugs and more (I'm referring mostly to the database here which is entirely unuseable)

Again, many thanks for your help.
Comment 10 Ian~G 2012-05-28 03:54:58 UTC
Eureka!

the problem with generating new borders is only really a problem on normal screen display. I cannot see the double border lines unless I zoom the display to 150%

I found I could control the borders by inputting the size, for example, thus:
0.005cm 0.035cm 0.005cm

(this was after extracting the .ods for a look at the xml inside)

So, you are right: importing legacy borders is the real mess.

Generating new borders works well enough except the dialogue box doesn't show the existing values so it's a pain to edit custom values.

Display of double borders at normal size doesn't work unless the display is zoomed to 150% or more.

I have LO 3.5.4 running on a lenovo thinkpad with a 15.6 full hd screen
Comment 11 Not Assigned 2012-06-04 07:32:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70a6a4d425558340bb49507975343a3e0a1bdde8

fdo#46112: fix Calc ODF border line import:
Comment 12 Not Assigned 2012-06-04 10:24:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=30aa036181480c76f909c2dda86b2682cac1fd73

fdo#46112: tweak condition to prevent guessing only...
Comment 13 Michael Stahl 2012-06-05 05:39:29 UTC
Created attachment 62579 [details]
Calc bugdoc with all border styles from OOo 3.3
Comment 14 Michael Stahl 2012-06-05 05:40:09 UTC
Created attachment 62580 [details]
Writer bugdoc with all border styles from OOo 3.3
Comment 15 Michael Stahl 2012-06-05 05:40:29 UTC
Created attachment 62581 [details]
Impress bugdoc with all border styles from OOo 3.3
Comment 16 Michael Stahl 2012-06-05 05:42:11 UTC
it's only a problem in Calc ODF import, the other applications
seem unaffected, see the attached ODF documents that contain
borders with all pre-defined styles that are available in OOo.

fixed on master.
Comment 17 sasha.libreoffice 2012-06-05 22:39:10 UTC
Thanks for fixing this bug
Comment 18 Not Assigned 2012-06-12 02:32:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=629743f0afa4a156e8809779c0fbe7ff3ffdcdc9&g=libreoffice-3-5

fdo#46112: fix Calc ODF border line import:


It will be available in LibreOffice 3.5.5.
Comment 19 Not Assigned 2012-06-12 02:33:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c203a292ff523ae4e4d4d9ac70166f281a141fcc&g=libreoffice-3-5

fdo#46112: tweak condition to prevent guessing only...


It will be available in LibreOffice 3.5.5.
Comment 20 Rainer Bielefeld Retired 2012-08-03 09:13:20 UTC
We need exact and correct target information for automated lists in Wiki and LibO Web Site.