fdo#46112: fix Calc ODF border line import:

There are 2 problems here:

- the border widths are tripled on import, because that is effectively
  what SetWidth does for DOUBLE borders; set a divisor of 3 similar to
  e2ffb71305c5f085eec6d396651c76d6daee3406

- the 3 individual line widths are ignored and the 3 lines end up with
  the same width, while older versions had numerous pre-defined border
  styles with asymmetric line widths; fix this by always guessing the
  width from the 3 parts for DOUBLE lines

Change-Id: Ibdde7e034e25433835765330e81db0825efd9eb8